crates/core/tests/ui/feature_not_found.stderr
error:
 --> tests/ui/feature_not_found.rs:9:5
  |
9 |     compile_error!("")
  |     ^^^^^^^^^^^^^^^^^^

warning: unexpected `cfg` condition value: `mocks`
 --> tests/ui/feature_not_found.rs:2:8
  |
2 | #[mock(feature = "mocks")]
  |        ^^^^^^^^^^^^^^^^^ help: remove the condition
  |
  = note: no expected values for `feature`
  = help: consider adding `mocks` as a feature in `Cargo.toml`
  = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
  = note: `#[warn(unexpected_cfgs)]` on by default
