crates/core/tests/ui/feature_not_found.rs
#[derive(mock_default::Mock)]
#[mock(feature = "mocks")]
enum Foo {
    #[mock]
    Bar,
}

fn main() {
    compile_error!("")
}
